# openapi/generated/brew-note/api/openapi.yaml
@@ -110,7 +110,6 @@ components:
         productionArea: productionArea
         kind: kind
         price: 0.8008281904610115
-        plantationName: plantationName
         id: id
         beanId: beanId
       properties:
@@ -119,8 +118,6 @@ components:
         beanId:
           type: string
         productionArea:
-          type: string
-        plantationName:
           type: string
         kind:
           type: string
@@ -134,7 +131,6 @@ components:
       - beanId
       - id
       - kind
-      - plantationName
       - price
       - productionArea
       - roastLevel
@@ -143,25 +139,15 @@ components:
         roastLevel: roastLevel
         productionArea: productionArea
         kind: kind
-        price: 0.8008281904610115
-        plantationName: plantationName
       properties:
         productionArea:
-          type: string
-        plantationName:
           type: string
         kind:
           type: string
         roastLevel:
           type: string
-        price:
-          format: double
-          nullable: true
-          type: number
       required:
       - kind
-      - plantationName
-      - price
       - productionArea
       - roastLevel
       type: object
