# src/models/bean.go
@@ -8,12 +8,11 @@ import (
 
 type Bean struct {
 	ID             string         `json:"id"`
-	UserId        string          `json:"userId"`
+	UserId         string         `json:"userId"`
 	ProductionArea string         `json:"productionArea"`
-	PlantationName string         `json:"plantationName"`
 	Kind           string         `json:"kind"`
 	RoastLevel     string         `json:"roastLevel"`
-	Price          string         `json:"price"`
+	Price   string         `json:"price"`
 	CreatedAt      *time.Time     `json:"createdAt"`
 	UpdatedAt      *time.Time     `json:"updatedAt"`
 	DeletedAt      gorm.DeletedAt `json:"deletedAt"`
